--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="space" src="imagenes/space.webp" alt="" srcset="">
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
